fix wrong display position on iOS Safari

--- a/templates/template-export-html-v2/css/style.css
+++ b/templates/template-export-html-v2/css/style.css
@@ -22,6 +22,7 @@ body {
 	touch-action: none;
 	width: 100%;
 	height: 100%;
+	position: absolute;
 }
 
 #container canvas {
